fixed the overflow issue with help of google

--- a/src/App.css
+++ b/src/App.css
@@ -58,7 +58,8 @@ button {
   align-items: center;
   border: 2px solid black;
   padding: 20px;
-  height: 30%;
+  overflow-y: auto;
+  max-height: 400px;
 }
 
 .Checkout {
